modified "common" css.
* separated "page"-specific definitions. these will be defined at "page"-specific css files (/static/css/page/*.css)

--- a/static/css/common/form.css
+++ b/static/css/common/form.css
@@ -4,6 +4,20 @@ form .textbox {
 }
 
 
+form .textbox-required {
+    border-width: 2px;
+}
+
+form .textbox-optional {
+}
+
+
+
+form .textbox-readonly {
+    color: #666;
+    background: #f0f0f0;
+}
+
 
 form button,
 form .button {
